Terraform/Terraform_Import_Cloudformation/import_vpc.tf
resource "aws_vpc" "mytestvpc01" {
  cidr_block           = "10.10.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    "Name" = "MyTestVPC"
  }
}
